--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="hnet.com-image.ico">
+  <meta name="Dance Choreographer" content="Put your site description here">
+  <meta name="author" content="862221528">
 
-  <title>John Doe - Business Administration</title>
+  <title>Alexia Baez - Dance Choreographer</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Alexia Baez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/alexiabaez.png.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,25 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Alexia Baez
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Dance Choreographer📚</div>
+        <p class="lead mb-4">Hello! My name is Alexia Lizette Baez and I am a second year at the University of California, Riverside. I am currently majoring in dance, but I am planning on switching it to sociology. I am currently 19 years old and planning on graduating in June 2024. I have 2 dogs and their names are August and April. The reason why their names are months of the year is because those are the months when I got them. I am a huge animal person, so I love dogs. However, cats are pretty cute too. I have two older brothers and their names are Mariano and Enrique, who I am really close to. We all get along very well and are always there for each other. There is an understanding balance between all of us. Even though we are a couple of years apart there is still an equal amount of treatment with us. <br><br>
+         My favorite thing to do is to go for a walk along the beach with my friends and dogs. I love to go get boba with my friends and enjoy watching the sunset. I am also into roller skating, although I am not the very best, I still try to learn. I have been dancing for nearly 7 years now and it has been a journey for the books. I fell in love with dance because I am able to express myself and love listening to music. The reason what got me into dancing was because ever since I was a little girl I would always dance at family gatherings. Once I got into high school that is when I really started to take it more seriously and be competitive with my abilities into pushing myself. I joined a non-profit academy that helped me develop my abilities to the very next level and shaped me into the person I am. I met so many amazing people who are still a part of my life and that helped me physically, emotionally and spiritually. The amount of love and support from the academy was truly inspiring and an unconditional love.<br><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+        The reason why I am switching majors is because the future career I want to pursue is being a Social Worker in order to help people. I love dancing and it will always be a part of my life which is why I will minor in dance instead. With both of these career choices I hope to shape and inspire future generations that it is okay to do what you love and have a successful career. There is no one to tell you that your dreams and goals can not come true. You just have to push yourself and know that you can do it. There will always be people around you that will either support you or envy you. Believe in yourself and make the impossible become what is possible.<br><br>
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://github.com/abaez018?tab=repositories">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/abaez018">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://github.com/abaez018?tab=stars">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://github.com/settings/organizations">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +94,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Secretary Assistant<br> 
+              • The Outkast Academy<br>
+              • Experience in Crafting<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -152,18 +151,18 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Undergrade Student</div>
+            <div>BA in Dance and Sociology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">February 2022 - June 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
+            <div class="subheading mb-3"></div>
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
@@ -174,7 +173,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
+            <div class="subheading mb-3">Sociology Administration</div>
             <div>Information Systems</div>
           </div>
           <div class="resume-date text-md-right">
@@ -191,7 +190,7 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img_1413_3_LKR_icon.ico" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +198,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Alexia Baez</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
